<project default="build-all" name="JPype - Test harness">

	<property name="src" location="harness"/>
	<property name="build" location="classes"/>
	<property name="version" value="${ant.java.version}"/>

	<target name="test" depends="compile"/>

	<condition property="build-9">
		<not><or>
		<equals arg1="${version}" arg2="1.8"/>
		<equals arg1="${version}" arg2="1.7"/>
		</or></not>
	</condition>

	<condition property="build-8">
		<not><equals arg1="${version}" arg2="1.7"/></not>
	</condition>

	<target name="compile-9" if="build-9">
		<javac destdir="${build}"
			source="${version}"
			target="${version}"
			includeantruntime="false"
			>
			<compilerarg value="--add-exports"/>
			<compilerarg value="java.base/jdk.internal.reflect=ALL-UNNAMED"/>
			<src>
				<pathelement location="${src}/java9"/>
			</src>
			<include name="jpype/**/*"/>
		</javac>
	</target>

	<target name="compile-8" if="build-8">
		<javac destdir="${build}"
			source="${version}"
			target="${version}"
			includeantruntime="false"
			>
			<src>
				<pathelement location="${src}/java8"/>
			</src>
			<include name="jpype/**/*"/>
		</javac>
	</target>

	<target name="compile-main">
		<mkdir dir="${build}"/>
		<javac destdir="${build}"
			source="${version}"
			target="${version}"
			includeantruntime="false"
			debug="true"
			debuglevel="lines,vars,source"
			>
			<src>
				<pathelement location="${src}"/>
			</src>
			<include name="jpype/**/*"/>
			<include name="org/**/*"/>
		</javac>
	<!--		<rmic base="${build}"
			classname="jpype.rmi.ServerImpl"
		/>
  -->
	</target>

	<target name="compile" depends="compile-main,compile-8,compile-9"/>

	<target name="clean">
		<delete dir="${build}"/>
	</target>

	<!-- Build javadocs for test class (jpype.doc package). -->
	<target name="javadoc">
		<javadoc
				sourcepath="${src}"
				destdir="${build}"
				packagenames="jpype.doc"
				failonerror="false"
				additionalparam="-Xdoclint:none">
			<classpath>
				<pathelement location="${build}"/>
			</classpath>
		</javadoc>
	</target>
	<!-- Minimal self-registering JDBC driver used by
	     test_imports.py::testAddClassPathLateJdbcDriver to verify a driver
	     jar added to the classpath after the JVM has started is still
	     picked up by java.sql.DriverManager. Built here (not committed as
	     a binary) since it is an ordinary, cleanly reproducible jar. -->
	<target name="latedriver-jar">
		<mkdir dir="jars/latedriver/classes"/>
		<javac destdir="jars/latedriver/classes"
			source="8"
			target="8"
			includeantruntime="false"
			>
			<src>
				<pathelement location="../project/jars/latedriver/src"/>
			</src>
			<include name="org/**/*"/>
		</javac>
		<copy todir="jars/latedriver/classes/META-INF/services">
			<fileset dir="../project/jars/latedriver/src/META-INF/services"/>
		</copy>
		<jar destfile="jars/latedriver/latedriver.jar"
			basedir="jars/latedriver/classes"/>
	</target>

	<target name="build-all" depends="compile,javadoc,latedriver-jar"/>
</project>
